RTI-320 - Fix: invisible grid in certain examples in Safari.

--- a/grid-packages/ag-grid-docs/src/javascript-grid-charts-integrated-customisation/available-themes/style.css
+++ b/grid-packages/ag-grid-docs/src/javascript-grid-charts-integrated-customisation/available-themes/style.css
@@ -5,7 +5,7 @@
 }
 
 #myGrid {
-    flex-grow: 1;
+    flex: 1 1 0px;
 }
 
  .my-chart {
